# rsdate

./: .cirrus.yml  Cargo.toml  README.md
src/: args.rs  error.rs  main.rs  time.rs
tests/: cli.rs
