[package]
name = "rsdate"
version = "0.4.0"
edition = "2018"

authors = [
    "Wesley Moore <wes@wezm.net>"
]
homepage = "https://github.com/wezm/rsdate"
repository = "https://github.com/wezm/rsdate.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "rsdate connects to an ntp server, printing the returned time and/or sets the system clock."
keywords = ["ntp", "time", "date"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
libc = "0.2"
log = "0.4.14"
pico-args = "0.4.2"
rsntp = { version =  "3.0", default-features = false, features = ["time"] }
syslog = "6, >= 6.0.1"
time = { version = "0.3.7", features = ["local-offset"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
