[package]
name = "rsdate"
version = "0.5.0"
edition = "2018"

authors = [
    "Wesley Moore <wes@wezm.net>"
]
homepage = "https://github.com/wezm/rsdate"
repository = "https://github.com/wezm/rsdate.git"

readme = "README.md"
license = "MIT OR Apache-2.0"

description = "rsdate connects to an ntp server, printing the returned time and/or sets the system clock."
keywords = ["ntp", "time", "date"]
categories = ["command-line-utilities", "date-and-time"]

[dependencies]
env_logger = { version = "0.9.0", default-features = false }
libc = "0.2.126"
log = "0.4.17"
pico-args = "0.5.0"
rsntp = { version = "3.0.1", default-features = false, features = ["time"] }
syslog = "6.0.1"
time = { version = "0.3.11", features = ["local-offset"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
